# vamos

./: .ado-metrics.yml  .env.example  .env.personal.example  .env.team.example  .gitignore  METRICS_README.md  README.md  cli.py  create_ticket.py  crons.yml.example  launch.bat  launch.command  launch.ps1  launch.sh  pyproject.toml  requirements.txt  routing.yml.example
.streamlit/: config.toml
hygiene/: 2026-05-12.json  2026-05-12.md
prompts/: board_standards.md  eod.md  sync.md
prompts/pr_review/: reviewer.md
reminders/: 2026-05-12.json  2026-05-12.md
templates/: new-ticket.md
trail/: 28855.jsonl
ui/: __init__.py  app.py  main.py  state.py  streaming.py  style.py  theme.py
ui/pages/: 01_my_day.py  02_team_status.py  03_pr_queue.py  05_inbox.py  06_brief.py  07_settings.py  08_help.py  __init__.py  brief.py  help_page.py  home.py  inbox.py  my_day.py  pr_queue.py  settings.py  team_status.py
vamos/: __init__.py  ado.py  at_risk.py  brief.py  capture.py  cleaner.py  cli.py  config.py  cron_install.py  deps.py  eod.py  healthcheck.py  inbox.py  llm.py  markdown_io.py  metrics_cli.py  prep.py  retro.py  scheduler.py  settings.py  slack.py  sod.py  standup.py  sync.py  teams.py  win_tasks.py
vamos/core/: __init__.py  boards.py  customer.py  delivery.py  people.py  report.py  snapshot.py  state.py  trends.py
vamos/hygiene/: __init__.py  clean_runner.py  runner.py
vamos/mcp/: __init__.py  _context.py  _serialize.py  metrics_dispatch.py  server.py  share.py  trail.py  workflow.py
vamos/metrics/: __init__.py  collector.py  generator.py  types.py
(+34 files in other folders)
