[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vamos"
version = "0.6.0"
description = "HaloMD agent suite — personal daily flow, team reporting, PR review."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HaloMD" }]
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = ["nicegui>=2.0"]
mcp = ["mcp[cli]>=1.2"]

[project.scripts]
vamos = "vamos.cli:main"

[tool.setuptools.packages.find]
include = ["vamos*", "ui*"]
